tests/fail/missing_placeholder.rs
fn main() {
    sscanf::scanf!("hi", "asdf{}", usize, std::vec::Vec<std::string::String>, u32);
    sscanf::scanf!("hi", "asdf{u32}{}{usize}", usize, u32);
}
