tests/fail/missing_placeholder.stderr
error: unused type
 --> tests/fail/missing_placeholder.rs:2:43
  |
2 |     sscanf::scanf!("hi", "asdf{}", usize, std::vec::Vec<std::string::String>, u32);
  |                                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: unused type
 --> tests/fail/missing_placeholder.rs:2:79
  |
2 |     sscanf::scanf!("hi", "asdf{}", usize, std::vec::Vec<std::string::String>, u32);
  |                                                                               ^^^

error: unused type
 --> tests/fail/missing_placeholder.rs:3:55
  |
3 |     sscanf::scanf!("hi", "asdf{u32}{}{usize}", usize, u32);
  |                                                       ^^^
